// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RuleItemButtons /> rendering should handle deleting state 1`] = `
<span
  class="ui-button-content-cef1"
>
  Delete rule
</span>
`;

exports[`<RuleItemButtons /> rendering should handle disabled duplicate 1`] = `
<span
  class="ui-button-content-cef1"
>
  Update rule
</span>
`;

exports[`<RuleItemButtons /> rendering should handle disabled duplicate 2`] = `
<span
  class="ui-button-content-cef1"
>
  Duplicate rule
</span>
`;

exports[`<RuleItemButtons /> rendering should handle disabled submit 1`] = `
<span
  class="ui-button-content-cef1"
>
  Update rule
</span>
`;

exports[`<RuleItemButtons /> rendering should handle disabled submit 2`] = `
<span
  class="ui-button-content-cef1"
>
  Duplicate rule
</span>
`;

exports[`<RuleItemButtons /> rendering should render the default buttons for created 1`] = `
<div
  class="buttons-container"
>
  <div>
    <button
      aria-disabled="false"
      class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1"
      form="rule-form"
      id="rule-item-save"
      type="button"
    >
      <span
        class="ui-button-content-cef1"
      >
        Create rule
      </span>
    </button>
  </div>
</div>
`;

exports[`<RuleItemButtons /> rendering should render the default buttons for update 1`] = `
<div
  class="buttons-container"
>
  <div>
    <button
      aria-disabled="false"
      class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1"
      form="rule-form"
      id="rule-item-save"
      type="button"
    >
      <span
        class="ui-button-content-cef1"
      >
        Update rule
      </span>
    </button>
    <button
      aria-disabled="false"
      class="ui-button-wrapper-cef1 ml-3 ui-button-fill-cef1 ui-button-secondary-cef1"
      id="rule-item-duplicate"
      type="submit"
    >
      <span
        class="ui-button-content-cef1"
      >
        Duplicate rule
      </span>
    </button>
  </div>
  <div>
    <button
      aria-disabled="false"
      class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-destructive-cef1"
      id="rule-item-delete"
      type="button"
    >
      <i
        aria-hidden="true"
        class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-medium-e486"
      >
        delete
      </i>
      <span
        class="ui-button-content-cef1"
      >
        Delete rule
      </span>
    </button>
  </div>
</div>
`;
